# Technical-Challenge-Delfos

./: .env.example  .gitignore  README.md  docker-compose.yaml
api/: .flake8  Dockerfile  Makefile  alembic.ini  pyproject.toml
api/scripts/: README.md  seed.py
api/src/: main.py
api/src/core/: settings.py
api/src/db/: __init__.py
api/src/db/migrations/: env.py
api/src/db/migrations/versions/: 3b184f357999_initial_migration.py
api/src/db/models/: data.py
api/src/routes/: data.py
api/tests/: conftest.py  test_routes.py
etl/: Dockerfile  Makefile  pyproject.toml
etl/src/: main.py
etl/src/core/: settings.py
etl/src/db/: __init__.py
etl/src/db/migrations/: env.py
etl/src/db/migrations/versions/: d7bdcbbc7d2f_first_migration.py
etl/src/db/models/: __init__.py  signal.py
etl/src/db/seeders/: db_structure.sql
etl/src/orchestration/: assets.py  definitions.py  resources.py  schedules.py
etl/tests/: test_main.py
