[project]
name = "api"
version = "0.1.0"
description = "ETL script for data manipulation, proposed in the technical test instructions"
authors = [
    {name = "Ageu-Meireles", email = "ageumeirelesbr@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
