[project]
name = "etl"
version = "0.1.0"
description = "ETL script for data manipulation, proposed in the technical test instructions"
authors = [
    {name = "Ageu-Meireles", email = "ageumeirelesbr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dagster-webserver (>=1.12.8,<2.0.0)",
    "dagster (>=1.12.8,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dagster]
module_name = "src.orchestration.definitions"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
